--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -1,9 +1,9 @@
 /* Empty. Add your own CSS if you like */
+
 * {
   font-family: Avenir-Book, RobotoDraft, Roboto, "Helvetica Neue", "Segoe UI", sans-serif;
   color: white;
 }
-
 p.ripple-font {
   font-family: Avenir-Book, "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
   color: #FFF;
@@ -11,7 +11,6 @@ p.ripple-font {
   line-height: 1.2;
   text-transform: none;
 }
-
 h1,
 h2,
 h3,
@@ -31,18 +30,15 @@ h6,
   font-family: Avenir-Book, "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
   line-height: 1.2;
 }
-
 .button.button-clear {
   color: #FFF;
 }
-
 .list .item {
   border: none;
   min-height: 48px;
   text-align: left;
   background-color: transparent;
 }
-
 textarea,
 input[type="text"],
 input[type="password"],
@@ -62,60 +58,66 @@ input[type="color"] {
   font-family: Avenir-Book;
   font-size: 14px;
   color: #FFFFFF;
-  background-color: rgba(255,255,255,.15);
+  background-color: rgba(255, 255, 255, .15);
   line-height: 20px;
 }
-
 input.clear-bg {
   background-color: transparent;
 }
-
-input.bottom-border {
-}
-
-div.row {
-  justify-content: center;
-}
-
+/* div.row { */
+/*   display: -ms-flexbox; */
+/*   display: -webkit-flex; */
+/*   display: flex; */
+/*   -webkit-flex-direction: column; */
+/*   -ms-flex-direction: column; */
+/*   flex-direction: column; */
+/*   -webkit-flex-wrap: nowrap; */
+/*   -ms-flex-wrap: nowrap; */
+/*   flex-wrap: nowrap; */
+/*   -webkit-justify-content: center; */
+/*   -ms-flex-pack: center; */
+/*   justify-content: center; */
+/*   -webkit-align-content: stretch; */
+/*   -ms-flex-line-pack: stretch; */
+/*   align-content: stretch; */
+/*   -webkit-align-items: center; */
+/*   -ms-flex-align: center; */
+/*   align-items: center; */
+/*   justify-content: center; */
+/* } */
 .item {
   border: none;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
-
 .item-input {
   width: 100%;
 }
-
 div.col.ripplecard {
   padding: 0;
   margin: 0;
 }
-
 div.row.ripplecard {
   padding: 0;
   margin: 5px 0;
-  background-color: rgba(255,255,255,.1);
+  background-color: rgba(255, 255, 255, .1);
 }
-
 div.row.ripplecardinfo {
-  overflow:hidden;
-  flex-direction:column;
-  flex-wrap:nowrap;
-  justify-content:space-between;
-  align-items:flex-end;
+  overflow: hidden;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-end;
   align-content: stretch;
-  height:100%;
+  height: 100%;
 }
-
 div.ripplecardinfobuttons {
-  position:absolute;
-  bottom:0;
-  right:0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
-
 ion-header-bar.flat.bar.bar-header {
-  background-color: rgba(255,255,255,.1);
+  background-color: rgba(255, 255, 255, .1);
   top: 0;
   border-top-width: 0;
   border-bottom-width: 1px;
@@ -123,11 +125,9 @@ ion-header-bar.flat.bar.bar-header {
   color: white;
   opacity: .8;
 }
-
 div.tab-nav.tabs {
-  background-color: rgba(255,255,255,.15);
+  background-color: rgba(255, 255, 255, .15);
 }
-
 .tabs-striped .tabs {
   background-color: transparent;
   border-bottom: 0px;
@@ -135,7 +135,6 @@ div.tab-nav.tabs {
   opacity: .8;
   color: white;
 }
-
 .tabs-striped .tab-item.tab-item-active,
 .tabs-striped .tab-item.active,
 .tabs-striped .tab-item.activated {
@@ -143,7 +142,6 @@ div.tab-nav.tabs {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-width: 1px 0 0 0;
 }
-
 .popup-buttons .button .ripple {
   margin-right: 0px;
   border-color: #FFFFFF;
@@ -152,7 +150,6 @@ div.tab-nav.tabs {
   border-radius: 50px;
   opacity: .8;
 }
-
 .popup-container .popup {
   width: 250px;
   max-width: 100%;
@@ -172,7 +169,6 @@ div.tab-nav.tabs {
   -ms-flex-direction: column;
   flex-direction: column;
 }
-
 .popup-container.active .popup {
   -webkit-animation-name: superScaleIn;
   animation-name: superScaleIn;
@@ -188,22 +184,17 @@ div.tab-nav.tabs {
   border-radius: 10px;
   text-align: center;
 }
-
 .login {
   margin-bottom: 0px;
 }
-
 .login .item {
-  border-bottom: 1px solid rgba(255,255,255,.2);
-  margin:0;
+  border-bottom: 1px solid rgba(255, 255, 255, .2);
+  margin: 0;
 }
-
 .row.loginspinner {
   position: absolute;
   bottom: 25px;
 }
-
-
 .item-stacked-label .input-label,
 .item-stacked-label .icon {
   display: inline-block;
@@ -232,28 +223,42 @@ button.button.button-block {
   margin-bottom: 0px;
   background-color: transparent;
 }
-
 button.button-block.facebook {
   opacity: .2;
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
   padding: 0px;
   margin: 0px;
-  text-transform:none;
+  text-transform: none;
 }
-
 .bar.bar-clear .title {
   color: #fff;
   text-decoration: none;
 }
-  /* SIGN UP: */
-div.row.signup {
-  flex-direction:column;
-  position:absolute;
-  bottom:10px;
-  justify-content: center;
-  align-items:center;
-}
+/* SIGN UP: */
 
+div.row.signup {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: stretch;
+  -ms-flex-line-pack: stretch;
+  align-content: stretch;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+
+  position: absolute;
+  bottom: 10px;
+}
 a.signup span.signup {
   display: inline;
   color: #fff;
@@ -264,7 +269,6 @@ a.signup span.signup {
   line-height: 10px;
   text-decoration: none;
 }
-
 a.signup span.account {
   /* DON’T HAVE AN ACCOUN: */
   display: inline;
@@ -276,7 +280,6 @@ a.signup span.account {
   line-height: 10px;
   text-decoration: none;
 }
-
 .emptyInbox {
   position: absolute;
   height: 50px;
@@ -287,7 +290,6 @@ a.signup span.account {
   text-align: center;
   color: #FFFFFF;
 }
-
 .sign-in {
   opacity: 0.5;
   border: 2px solid #FFFFFF;
@@ -332,7 +334,6 @@ a.signup span.account {
   margin-bottom: 0;
   opacity: 0.5;
 }
-
 .pane,
 .view {
   position: absolute;
@@ -348,7 +349,6 @@ a.signup span.account {
   background-size: cover;
   overflow: hidden;
 }
-
 .item.item-divider {
   border-top: solid 1px rgba(255, 255, 255, .25);
   font-size: 14px;
@@ -370,7 +370,7 @@ a.signup span.account {
   padding-bottom: 1px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   background-color: transparent;
-  margin:0px;
+  margin: 0px;
 }
 div.thumb {
   display: inline-block;
@@ -381,52 +381,46 @@ div.thumb {
   background-position: center center;
   background-size: cover;
 }
-
 .toggle .track {
   background-color: transparent;
 }
-
 .counter {
   position: absolute;
   color: rgba(255, 255, 255, 1);
   bottom: 2px;
   right: 2px;
 }
-
 .spinner svg {
   width: 80px;
   height: 80px;
   stroke: #3AFEA4;
   fill: #3AFEA4;
 }
-
-.button.button:disabled, .button.button:disabled:hover, .button.button:hover {
-  background-color: rgba(0,0,0,0);
+.button.button:disabled,
+.button.button:disabled:hover,
+.button.button:hover {
+  background-color: rgba(0, 0, 0, 0);
 }
-
 .modal .scroll {
   height: 100% !important;
   background-color: black !important;
-
-   display: -webkit-box !important;
-    display: -moz-box !important;
-    display: -ms-flexbox !important;
-    display: -webkit-flex !important;
-    display: flex !important;
-
-   -webkit-box-direction: normal !important;
-    -moz-box-direction: normal !important;
-    -webkit-box-orient: horizontal !important;
-    -moz-box-orient: horizontal !important;
-    -webkit-flex-direction: row !important;
-    -ms-flex-direction: row !important;
-    flex-direction: row !important;
-
-    -webkit-box-align: center !important;
-    -moz-box-align: center !important;
-    -webkit-align-items: center !important;
-    -ms-flex-align: center !important;
-    align-items: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-box-direction: normal !important;
+  -moz-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  -moz-box-orient: horizontal !important;
+  -webkit-flex-direction: row !important;
+  -ms-flex-direction: row !important;
+  flex-direction: row !important;
+  -webkit-box-align: center !important;
+  -moz-box-align: center !important;
+  -webkit-align-items: center !important;
+  -ms-flex-align: center !important;
+  align-items: center !important;
 }
 
 .modalCaption {
